2008-04-21  Christan Thalinger  <twisti@complang.tuwien.ac.at>

	* patches/icedtea-cacao.patch: Set the ARCH_DATA_MODEL correct for
	almost all architectures (I missed that when merging in the
	cacao-branch).

2008-04-17  Joshua Sumali  <jsumali@redhat.com>

	* configure: Regenerated.
	* configure.ac: Bump version number to 1.2.

2008-04-17  Joshua Sumali  <jsumali@redhat.com>

	* rt/net/sourceforge/jnlp/Launcher.java: Fix applet focusing bug.

2008-04-16  Keith Seitz  <keiths@redhat.com>

	* patches/icedtea-LCMS-setTagData.patch: New file.
	* patches/icedtea-color-createcontext.patch: New file.
	* Makefile.am (ICEDTEA_PATCHES): Add above patches.
	* Makefile.in: Regenerated.

2008-04-16  Andrew Haley  <aph@littlepinkcloud.com>

	* ports/hotspot/src/os_cpu/linux_zero/vm/atomic_linux_zero.inline.hpp
	(arm_add_and_fetch, arm_lock_test_and_set, arm_compare_and_swap): 
	Rewrite.

2008-04-16  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-core-build.patch: Install libjvm.so in server
	rather than in core.
	* jvm.cfg.in: Updated with new libjvm.so location.

2008-04-15  Gary Benson  <gbenson@redhat.com>
            Yi Zhan <yi.zhan@intel.com>

	* patches/icedtea-ia64-fdlibm.patch: New file.
	* Makefile.am (ICEDTEA_PATCHES): Added the above.
	* aclocal.m4, Makefile.in: Regenerated.

2008-04-15  Christan Thalinger  <twisti@complang.tuwien.ac.at>

	* acinclude.m4 (ENABLE_ZERO_BUILD): Make --disable-zero work and
	don't build zero by default when compiling --with-cacao.
	* aclocal.m4, configure, Makefile.in: Regenerated.

2008-04-14  Joshua Sumali  <jsumali@redhat.com>

	* rt/net/sourceforge/jnlp/services/XFileContents.java: Add support for
	JNLPRandomAccessFile.
	* rt/net/sourceforge/jnlp/services/XServiceManagerStub.java: Add
	PrintService and JNLPRandomAccessFile services.
	* rt/net/sourceforge/jnlp/services/XJNLPRandomAccessFile.java: New file.
	* rt/net/sourceforge/jnlp/services/XPrintService.java: Likewise.

2008-04-14  Lillian Angel  <langel@redhat.com>
