@@ -607,7 +607,11 @@ AC_DEFUN([ENABLE_ZERO_BUILD],
 
 AC_DEFUN([SET_CORE_BUILD],
 [
-  AM_CONDITIONAL(CORE_BUILD, test "x${ZERO_BUILD_TRUE}" = x)
+  if test "x${CACAO}" != "xno"; then
+    AM_CONDITIONAL(CORE_BUILD, true)
+  else
+    AM_CONDITIONAL(CORE_BUILD, test "x${ZERO_BUILD_TRUE}" = x)
+  fi
 ])
 
 AC_DEFUN([ENABLE_NETX_PLUGIN],
